--- a/boletines/index.html
+++ b/boletines/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="content">
         <header>
-          <h1>Los mejores cervecerías de mi ciudad</h1>
+          <h1>Top 5 - Cervecerías</h1>
         </header>
         <table class="table">
           <thead>
